# ChangeLog for genkernel
# Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 May 2008; Chris Gianelloni <wolf31o2@gentoo.org> alpha/modules_load,
  ia64/modules_load, mips/modules_load, parisc/modules_load,
  parisc64/modules_load, ppc/modules_load, ppc64/modules_load,
  sparc/modules_load, sparc64/modules_load, um/modules_load,
  x86/modules_load, x86_64/modules_load:
  Added a few SATA and PATA drivers to modules_load.

  09 May 2008; Chris Gianelloni <wolf31o2@gentoo.org> alpha/modules_load,
  ia64/modules_load, mips/modules_load, parisc/modules_load,
  parisc64/modules_load, ppc/modules_load, ppc64/modules_load,
  sparc/modules_load, sparc64/modules_load, um/modules_load,
  x86/modules_load, x86_64/modules_load:
  Updated the modules_load files.

  25 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts, genkernel:
  Enable keymap code when keymap is set on the kernel command line. This is
  genkernel 3.4.10_pre10 for testing.

  25 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts:
  We need to unset keymap if it doesn't match to keep from hitting an infinite
  loop.

  24 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org> gen_determineargs.sh,
  gen_funcs.sh, generic/initrd.scripts, generic/linuxrc:
  Updated the keymap-handling code so it will be installed and displayed
  without using --do-auto-keymap with a patch from Florian Schilhabel
  <fernsehleo@gmx.net> for bug #215822. Also, added a keymap= command line
  option to allow setting keymap from the bootloader, also from Florian.

  22 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts:
  Change from using a directory check to a file check. This should fix bug
  #215822.

  12 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.defaults:
  Move removable storage like USB and firewire after traditional fixed storage
  like PATA/SATA/SCSI for bug #217347.
