@@ -124,6 +124,8 @@ set_kernel_arch
 
 setup_cache_dir
 
+check_distfiles
+
 dump_debugcache
 
 NORMAL=${BOLD} print_info 1 "Linux Kernel ${BOLD}${KV}${NORMAL} for ${BOLD}${ARCH}${NORMAL}..."
