@@ -123,9 +123,9 @@ USECOLOR="yes"
 GK_SHARE="/usr/share/genkernel"
 
 # Location of the default cache
-CACHE_DIR="/var/cache/genkernel/%%ARCH%%"
+CACHE_DIR="/var/cache/genkernel"
 # Location of DISTDIR, where our source tarballs are stored
-DISTDIR="/usr/portage/distfiles"
+DISTDIR="${CACHE_DIR}/src"
 # Log output file
 LOGFILE="/var/log/genkernel.log"
 # Debug Level
